fixes background image bounce issue on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,10 +77,17 @@
 }
 
 body {
+    background-color: #000 !important;
     width: 100%;
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
         url(/bg4.jpg) center/cover no-repeat fixed;
+}
+
+@media (max-width: 767px) {
+    body {
+        background-attachment: scroll;
+    }
 }
 
 .overlay {
